--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ DIVIDEND_YIELD=0.0127
 MIN_STRIKE_PCT=80
 MAX_STRIKE_PCT=120
 # Modified on 2024-11-30 00:00:00
+
+# Modified on 2024-12-25 00:00:00
